Linked nav bar, fixed h1 box, floated img1 left so txt wraps around

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,26 +3,32 @@ body {
     color: #777777;
     width: 960px;
     border: grey 1px solid;
-    background-image: url("assets/images/concrete_seamless.png");
+    background-image: url(assets/images/concrete_seamless.png);
+    background-position: 100%;
+    background-size: auto;
     padding: 20px;
     position: relative;
     left: 220px;
+    
 }
 
 h1
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
     color: #ffffff;
     background-color: #4aaaa5;
     border-color: #cccccc;
-    background-image: url("assets/images/concrete_seamless.png");
+    border-bottom: 1px solid #777777;
+    padding: 20px;
+    width: 25%;
 }
 
 h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #ffffff;
-    background-color: #4aaaa5;
+    color: #4aaaa5;
     border-color: #cccccc;
+    border-top: 2px solid #777777;
     
 }
 
@@ -30,16 +36,37 @@ img {
     height: 200px;
     width: 200px;
     margin-right: 10px;
+    float: left;
+}
+
+.clearfix {
+    overflow: auto;
+}
+
+#aboutMeP {
+    float: none;
 }
 
 .topnav {
+    overflow: hidden;
     float: right;
     position: relative;
     bottom: 50px;
+    color: #777777;
 }
 
-#about {
-    float: right;
+.topnav a {
+    padding: 14px 26px;
+}
+
+
+a:link {
+    color: #777777;
+    text-decoration: none;
+}
+a:visited {
+    color: #777777;
+    text-decoration: none;
 }
 
 .footer1 {
